--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
   position: relative;
   width: 60px;
   height: 60px;
-  background: url(/image/menu-48-w.png);
+  background: url(/src/images/menu-48-w.png);
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: center;
@@ -100,7 +100,7 @@ body {
   transition: all 0.2s linear;
 }
 .toggle.active {
-  background: url(/image/close-w.png);
+  background: url(/src/images/close-w.png);
   background-repeat: no-repeat;
   background-size: 30px;
   background-position: center;
